# qt-my-image-editor

./: CMakeLists.txt  MyImageEditor.sln  QtWidgetsApplication1.sln  commandmanager.cpp  commandmanager.h  drawcommand.cpp  drawcommand.h  drawellipsecommand.cpp  drawellipsecommand.h  drawfreehandcommand.cpp  drawfreehandcommand.h  drawrectanglecommand.cpp  drawrectanglecommand.h  main.cpp  myimageeditor.cpp  myimageeditor.h  myimageeditor.ui  paintarea.cpp  paintarea.h
MyImageEditor/: DrawCommand.h  DrawEllipseCommand.cpp  DrawRectangleCommand.cpp  MyImageEditor.qrc  MyImageEditor.vcxproj.filters  main.cpp  resource.h
QtWidgetsApplication1/: CommandManager.cpp  CommandManager.h  DrawCommand.cpp  DrawCommand.h  DrawEllipseCommand.h  DrawFreeHandCommand.cpp  DrawFreeHandCommand.h  DrawRectangleCommand.h  MyImageEditor.cpp  MyImageEditor.h  MyImageEditor.rc  PaintArea.cpp  PaintArea.h  QtWidgetsApplication1.cpp  QtWidgetsApplication1.h  QtWidgetsApplication1.ui  QtWidgetsApplication1.vcxproj  QtWidgetsApplication1.vcxproj.filters  main.cpp
Test/: CMakeLists.txt  PaintAreaTests.cpp  test.cpp
